--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,41 @@
-.idea
+# Dependencies
 node_modules/
 bower_components/
-.DS_Store
-.DS_Store/
+
+# Build output
+dist/output.concat.js
 dist/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Vercel
+.vercel
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
