--- a/package.json
+++ b/package.json
@@ -3,6 +3,19 @@
   "version": "1.0.0",
   "description": "Arkanoid style game",
   "main": "index.html",
+  "scripts": {
+    "build": "npm run install-deps && npm run grunt-build",
+    "install-deps": "npm install && npx bower install --allow-root",
+    "grunt-build": "npx grunt build",
+    "dev": "npx grunt build && npx serve .",
+    "preview": "npx serve .",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "q": "^1.5.1",
+    "jquery": "^2.2.4",
+    "js-md5": "^0.7.3"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
@@ -12,10 +25,9 @@
     "grunt-contrib-htmlmin": "^0.4.0",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.8.0",
-    "grunt-processhtml": "^0.3.7"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "grunt-processhtml": "^0.3.7",
+    "bower": "^1.8.14",
+    "serve": "^14.2.1"
   },
   "repository": {
     "type": "git",
