fix: resolve GitHub Actions deployment failure
✅ Fixed GitHub Actions workflow to use npm scripts instead of npx grunt
✅ Updated Vercel configuration for better caching
✅ Added build verification workflow
✅ Created deployment script with error handling
✅ Added comprehensive troubleshooting guide

Issues resolved:
- npm error could not determine executable to run
- Grunt not found in CI environment
- Improved error handling and logging
- Better caching configuration for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -23,7 +23,7 @@
   "functions": {},
   "headers": [
     {
-      "source": "/(.*)",
+      "source": "/dist/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
