--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm run install-deps && npm run grunt-build",
     "install-deps": "npm install && npx bower install --allow-root",
-    "grunt-build": "npx grunt build",
+    "grunt-build": "grunt build",
     "dev": "npx grunt build && npx serve .",
     "preview": "npx serve .",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-cli": "^1.4.3",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.0",
