--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "version": 2,
-  "name": "ball-and-wall",
   "builds": [
     {
       "src": "package.json",
@@ -10,34 +9,7 @@
       }
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ],
   "buildCommand": "npm run build",
   "outputDirectory": ".",
-  "installCommand": "npm install && npx bower install --allow-root",
-  "framework": null,
-  "headers": [
-    {
-      "source": "/dist/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/(.*\\.(html|css|js))",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=0, must-revalidate"
-        }
-      ]
-    }
-  ]
+  "installCommand": "npm install && npx bower install --allow-root"
 }
